--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "react-test-renderer": "17.0.2",
     "redux": "^4.2.0",
     "redux-form": "8.3.8",
-    "redux-thunk": "2.4.1",
+    "redux-thunk": "^2.4.2",
     "reselect": "4.1.5",
     "typescript": "4.4.2",
     "uuid": "8.3.2",
@@ -57,7 +57,7 @@
     "@types/node": "16.7.13",
     "@types/react": "17.0.20",
     "@types/react-dom": "17.0.9",
-    "@types/react-redux": "7.1.22",
+    "@types/react-redux": "^7.1.24",
     "@types/react-router-dom": "^5.3.3",
     "@types/react-test-renderer": "17.0.1",
     "@types/redux-form": "8.3.3",
