--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "react-scripts": "5.0.0",
     "react-test-renderer": "17.0.2",
     "redux": "^4.2.0",
-    "redux-form": "8.3.8",
+    "redux-form": "^8.3.9",
     "redux-thunk": "^2.4.2",
     "reselect": "4.1.5",
     "typescript": "4.4.2",
