--- a/package.json
+++ b/package.json
@@ -2,16 +2,20 @@
   "name": "samurai-way",
   "version": "0.1.0",
   "private": true,
-  "homepage": "",
+  "homepage": "https://chik1313.github.io/samurai-way-main",
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/material": "^5.11.8",
+    "@mui/styled-engine-sc": "^5.11.0",
     "@testing-library/jest-dom": "5.14.1",
     "@testing-library/react": "12.0.0",
     "@testing-library/user-event": "13.2.1",
     "antd": "4.18.7",
     "axios": "^1.1.3",
     "classnames": "2.3.1",
-    "formik": "2.2.9",
-    "gh-pages": "3.2.3",
+    "formik": "^2.2.9",
+    "gh-pages": "^5.0.0",
     "jest": "27.5.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -23,9 +27,12 @@
     "redux-form": "^8.3.9",
     "redux-thunk": "^2.4.2",
     "reselect": "4.1.5",
+    "styled-components": "^5.3.6",
     "typescript": "4.4.2",
     "uuid": "8.3.2",
-    "web-vitals": "2.1.0"
+    "web-vitals": "2.1.0",
+    "yu": "^1.0.0",
+    "yup": "^1.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
