--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@testing-library/user-event": "13.2.1",
     "antd": "4.18.7",
     "axios": "^1.1.3",
-    "classnames": "2.3.1",
+    "classnames": "^2.3.1",
     "formik": "^2.2.9",
     "gh-pages": "^5.0.0",
     "jest": "27.5.1",
@@ -24,7 +24,7 @@
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.0",
-    "react-test-renderer": "17.0.2",
+    "react-test-renderer": "18.2.0",
     "redux": "^4.2.0",
     "redux-form": "^8.3.9",
     "redux-thunk": "^2.4.2",
